2009-04-01 vincentd
* Move here versioning table from erp5_dms_mysql_innodb_catalog.

2008/11/13 yusei
* Start to develop version 5.4.

2008-10-14 yusei
* Start to develop version 5.3.

2008-09-24 yusei
* Update xml format.

2008-06-27 yusei
* Start to develop version 5.2.

2008-06-26 yusei
* Revise version to 5.1.

2008-05-22 yusei
* Change viewable_owner and owner columns of catalog table from varchar(32) to varbinary(255).

2008-04-17 yusei
* Revise version to 5.0.

2008-03-25 aurel
* z_count_results must retrieve all rows by default as limit is explicitly given by catalog

2007-06-22 yo
* Remove keyword keys, because there is no way to disable them later.

2007-04-05 Aurel
* fix index for category table

2007-02-01 Romain
* Add mirror_date column to the stock table.

2006-12-27 vincent
* Move catalog related things from erp5_core into this new BT.