@@ -62,10 +62,12 @@
   `language` varchar(2) default \'\',\n
   `revision` varchar(10) default \'\',\n
   `effective_date` datetime default NULL,\n
+  `expiration_date` datetime default NULL,\n
   PRIMARY KEY  (`uid`),\n
   KEY `version` (`version`),\n
   KEY `language` (`language`),\n
-  KEY `effective_date` (`effective_date`)\n
+  KEY `effective_date` (`effective_date`),\n
+  KEY `expiration_date` (`effective_date`)\n
 ) TYPE=InnoDB;\n
 </string> </value>
         </item>
@@ -109,10 +111,12 @@
   `language` varchar(2) default \'\',\n
   `revision` varchar(10) default \'\',\n
   `effective_date` datetime default NULL,\n
+  `expiration_date` datetime default NULL,\n
   PRIMARY KEY  (`uid`),\n
   KEY `version` (`version`),\n
   KEY `language` (`language`),\n
-  KEY `effective_date` (`effective_date`)\n
+  KEY `effective_date` (`effective_date`),\n
+  KEY `expiration_date` (`effective_date`)\n
 ) TYPE=InnoDB;\n
 </string> </value>
                     </item>
